[gd_scene load_steps=27 format=3 uid="uid://7w1ur7aqqvti"]

[ext_resource type="Script" path="res://Scripts/coin.gd" id="1_n0v4l"]
[ext_resource type="Material" uid="uid://delm7ytskxl55" path="res://Assets/shaders/Pink_to_transparent.tres" id="2_oibwy"]
[ext_resource type="Texture2D" uid="uid://b2emmoufysvni" path="res://Assets/sprites/Atlases/Items/Level_1_Armor.png" id="3_1go0a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kthml"]
atlas = ExtResource("3_1go0a")
region = Rect2(256, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1tlg"]
atlas = ExtResource("3_1go0a")
region = Rect2(256, 128, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkca3"]
atlas = ExtResource("3_1go0a")
region = Rect2(512, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8c"]
atlas = ExtResource("3_1go0a")
region = Rect2(0, 128, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwg8t"]
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_432w2"]
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqs8s"]
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx52q"]
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfev1"]
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkq4v"]
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqolm"]
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7bcb"]
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_357su"]
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7sfj"]
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_es52k"]
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx2gw"]
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2r7x"]
atlas = ExtResource("3_1go0a")
region = Rect2(0, 0, 256, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnucr"]
atlas = ExtResource("3_1go0a")
region = Rect2(512, 128, 256, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8321"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kthml")
}],
"loop": true,
"name": &"cloth_arms",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1tlg")
}],
"loop": true,
"name": &"cloth_chest",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkca3")
}],
"loop": true,
"name": &"cloth_helm",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8c")
}],
"loop": true,
"name": &"cloth_pants",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwg8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_432w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqs8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx52q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfev1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkq4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqolm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7bcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_357su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7sfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es52k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx2gw")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2r7x")
}],
"loop": true,
"name": &"level1_shield",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnucr")
}],
"loop": true,
"name": &"level1_sword",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jf2hf"]
radius = 39.1004

[sub_resource type="Animation" id="Animation_vl6ig"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PickupSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_htqxr"]
resource_name = "pickup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PickupSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3552n"]
_data = {
"RESET": SubResource("Animation_vl6ig"),
"pickup": SubResource("Animation_htqxr")
}

[node name="Coin" type="Area2D"]
scale = Vector2(2, 2)
collision_mask = 2
script = ExtResource("1_n0v4l")
Item_Type = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_oibwy")
position = Vector2(-0.5, 3)
scale = Vector2(0.495, 0.495)
sprite_frames = SubResource("SpriteFrames_r8321")
animation = &"cloth_chest"
autoplay = "cloth_helm"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.965, 1.965)
shape = SubResource("CircleShape2D_jf2hf")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3552n")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
